# rust_string_utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  test.rs
src/utils/: append.rs  byte_array_to_string.rs  chomp_chop.rs  compare.rs  count.rs  count_matches.rs  equals.rs  find.rs  index.rs  is_blank.rs  is_empty.rs  join_char.rs  number.rs  overlay.rs  remove_delete.rs  replace.rs  replace_chars.rs  reverse.rs  rotate.rs  start_with.rs  swap_case.rs  test.rs  timestamp_to_string.rs  trip.rs
